--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.10.8",
     "tslib": "^2.3.0",
+    "validator": "^13.12.0",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
@@ -32,6 +33,7 @@
     "@angular/cli": "~16.2.1",
     "@angular/compiler-cli": "^16.2.0",
     "@types/jasmine": "~4.3.0",
+    "@types/validator": "^13.11.10",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
